--- a/WebProject/styles.css
+++ b/WebProject/styles.css
@@ -57,3 +57,9 @@ footer{
     padding-left: 10px;
     padding-right: 10px;
 }
+.content img{
+    margin-left: 10px;
+    margin-top: 5px;
+    border: red 5px solid;
+    border-radius: 1000px;
+}
